# AI-Agent-for-Automated-ML

./: README.md  best_model.pth  pyproject.toml  workflow.py
examples/: decision_tree.py  model_advisor.py  sample_output.py  workflow.py
ml_master/: workflow.py
ml_master/agents/: __init__.py  advisor.py  common.py  decision_tree.py  ensemble.py  logistic.py  lr.py  naive_bayes.py  nn.py  refine.py  svm.py
ml_master/misc/: __init__.py  code.py  df_utils.py
