[project]
authors = [{name = "harnvo", email = "wzc13162016886@163.com"}]
name = "ml_master"
requires-python = ">= 3.10"
version = "0.1.0"
dependencies = [ 
    "docker>=7.1.0,<8", 
    "langchain==0.3.22", 
    "langchain-deepseek>=0.1.3,<0.2", 
    "pandas>=2.2.3,<3", 
    "numpy>=2.2.4,<3", 
    "jupyter>=1.1.1,<2", "jupyterlab>=4.3.6,<5", "pixi-kernel>=0.6.2,<0.7", "ipykernel>=6.29.5,<7", "pip>=25.0.1,<26", 
    "scikit-learn>=1.6.1,<2",
    "torch>=2.6",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["ml_master"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-options]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"


[tool.pixi.pypi-dependencies]
ml_master = { path = ".", editable = true }

[tool.pixi.tasks]
